# excelstream

./: .gitignore  AGENTS.md  ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  Cargo.toml  HTTP_STREAMING.md  IMPROVEMENT_PLAN.md  Makefile  PERFORMANCE_RESULTS_V0.8.0.md  PERFORMANCE_TEST_RESULTS.md  QUICKSTART.md  README.md
benches/: streaming_benchmark.rs
docs/: ADVANCED.md  FAST_WRITER.md  MEMORY_CONSTRAINED.md  OPTIMIZATION_SUMMARY.md
examples/: POSTGRES_EXAMPLES.md  POSTGRES_QUICKREF.md  README.md  auto_memory_config.rs  basic_read.rs  basic_write.rs  benchmark_readers.rs  cell_formatting.rs  column_width_row_height.rs  compare_memory_readers.rs  csv_excel_comparison.rs  csv_read.rs  csv_to_excel.rs  csv_write.rs  debug_wrapper_overhead.rs  debug_write_row_fast.rs  excel_to_parquet.rs  fast_writer_test.rs  fast_writer_validation.rs  gcs_performance_test.rs  gcs_streaming.rs  http_memory_test.rs  http_streaming.rs  incremental_append.rs  large_dataset_multi_sheet.rs  memory_benchmark.rs  memory_constrained_write.rs  memory_profile_read.rs  memory_profile_streaming_reader.rs  memory_stability_test.rs  memory_test_read_large.rs  memory_usage_test.rs  multi_sheet.rs  parquet_performance_test.rs  parquet_streaming.rs  parquet_to_excel.rs  performance_optimized.rs  performance_test.rs  postgres_streaming.rs  postgres_to_excel.rs  (+16 more)
src/: csv_reader.rs  csv_writer.rs  error.rs  http_csv_writer.rs  lib.rs  reader.rs  streaming_reader.rs  types.rs  writer.rs
wasm_adapter/: Cargo.toml  README.md
wasm_adapter/src/: lib.rs  local_csv.rs
wasm_adapter/wasm_demo/: index.html
(+24 files in other folders)
